syntax = "proto3";

option csharp_namespace = "OrderServices";

package order;

// The Order service definition.
service Order {
  // Sends a greeting
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderReply);
}

// The request message containing the user's name.
message PlaceOrderRequest {
  string total_amount  = 1;
  string wallet_id  = 2;
  string user_id  = 3;
}

// The response message containing the greetings.
message PlaceOrderReply {
  string message = 1;
}
